--- a/views/index.html
+++ b/views/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../static/css/font.css">
-    <link rel="stylesheet" href="../static/css/xadmin.css">
-    <link rel="icon" href="../static/images/zlkt.ico" type="image/x-icon"/>
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="stylesheet" href="/static/css/xadmin.css">
+    <link rel="icon" href="/static/images/zlkt.ico" type="image/x-icon"/>
+    <script type="text/javascript" src="/static/js/ztree/jquery.min.js"></script>
     <script src="../static/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="../static/js/xadmin.js"></script>
 
@@ -184,7 +184,7 @@
                 <ul class="sub-menu">
 
                     <li>
-                        <a _href="auth-list.html">
+                        <a _href="{{urlfor "AuthController.List"}}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>权限列表</cite>
                         </a>
