--- a/views/auth/role-user-add.html
+++ b/views/auth/role-user-add.html
@@ -6,8 +6,7 @@
     <title>欢迎页面-X-admin2.0</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="/static/lib/layui/css/layui.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="/static/lib/layui/css/layui.css" media="all">
     <link rel="stylesheet" href="/static/css/font.css">
     <link rel="stylesheet" href="/static/css/sweetalert.css">
     <link rel="stylesheet" href="/static/css/xadmin.css">
@@ -16,13 +15,14 @@
     <script src="/static/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="/static/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/lib/layui/layui.all.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/lib/layui/lay/modules/layer.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/js/xadmin.js"></script>
+    <script type="text/javascript" src="/static/js/chosen.jquery.js"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap-chosen.css">
 </head>
 
 <body>
 <div class="x-body">
-    <form class="layui-form" action="" lay-filter="component-form-group">
+    <form id="form" class="layui-form" action="" lay-filter="component-form-group">
         <div class="layui-form-item">
             <label class="layui-form-label">角色名称</label>
             <div class="layui-input-inline" style="width:200px;">
@@ -41,10 +41,9 @@
         <div class="layui-form-item">
             <label class="layui-form-label">添加用户</label>
             <div class="layui-input-block">
-                <select data-placeholder="请选择..." class="chosen-select" multiple style="width:350px;" tabindex="4"
-                        id="role_user_select">
+                <select data-placeholder="请选择..."  class="chosen-select" multiple style="width:350px;" tabindex="4" id="role_user_select">
                     {{range .role.User}}
-                        <option value="{{.Id}}" selected>{{.UserName}}</option>
+                        <option value="{{.Id}}" selected=''>{{.UserName}}</option>
                     {{end}}
                     {{range .users}}
                         <option value="{{.Id}}">{{.UserName}}</option>
@@ -57,23 +56,26 @@
         <div class="layui-form-item layui-layout-admin">
             <div class="layui-input-block">
                 <div class="layui-footer">
-                    <button class="layui-btn" id="role_user_add_btn">立即提交</button>
-                    <a href="#" class="layui-btn layui-btn-primary">返回</a>
+                    <button type="button" class="layui-btn" id="role_user_add_btn">立即提交</button>
+                    <a onclick="x_admin_close()" href="#" class="layui-btn layui-btn-primary">返回</a>
                 </div>
             </div>
         </div>
     </form>
 </div>
 <script>
-    // $('.chosen-select').chosen({width: "100%"});
-
-    // js获取多选框数据：
+    $('.chosen-select').chosen({width: "100%"});
+    // $(function () {
+    //     var form, $;
+    //     layui.use(['form', 'layer'], function () {
+    //         form = layui.form;
+    //         var layer = parent.layer === undefined ? layui.layer : parent.layer;
+    //         $ = layui.jquery;
     //
-    // var role_user_select_list=[];
-    // //获取多选框的值
-    // $("#role_user_select :selected").each(function(){
-    //     role_user_select_list.push($(this).val());
-    // });
+    //         // $("select[name=select-user]").val(["4","5"]);
+    //         form.render();
+    //     })
+    // })
     $("#role_user_add_btn").click(function () {
         var role_id = Number('{{.role.Id}}')
         var user_ids = []
@@ -93,7 +95,9 @@
                 } else {
                     ions_alert.alertErrorToast(data.msg)
                 }
-                setTimeout(x_admin_close, 3000)
+                setTimeout(function () {
+                    x_admin_close()
+                }, 1000)
             },
             error: function (data) {
                 ions_alert.alertErrorToast("失败了！")
